--- a/gamedesign.html
+++ b/gamedesign.html
@@ -95,7 +95,7 @@
                 <h4>Game Design</h4>
             </div>
         </div>
-        <!-- <div class="row">
+        <div class="row">
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
@@ -122,9 +122,8 @@
                         <p>Critiquing this 1996 classic!</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://drive.google.com/file/d/19pXZvWe4LxkpIMJn18ipKaBkXhf2dz7B/view?usp=sharing"
-                            download="Varun Sunil Bajaj - Game Design - Critique 2 - Crash Bandicoot.pdf"
-                            target="_blank">Download</a>
+                        <a href="https://link.medium.com/m3kIWsmQ0qb"
+                            target="_blank">Read on Medium</a>
                     </div>
                 </div>
             </div>
@@ -138,13 +137,12 @@
                         <p>Critiquing Naughty Dog's finest!</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://drive.google.com/file/d/1VhzKSLD8d7UVAHWit6m8QbTA4Z5kH6oc/view?usp=sharing"
-                            download="Varun Sunil Bajaj - Game Design - Critique 3 - Uncharted 2 Among Theives.pdf"
-                            target="_blank">Download</a>
+                        <a href="https://link.medium.com/mOLlXTkQ0qb"
+                            target="_blank">Read on Medium</a>
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
         <div class="row">
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
