make text black

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                         <div class="card hoverable black">
                             <div class="card-image">
                                 <img src="images/home/leveldesign.png">
-                                <span class="card-title">Level Design</span>
+                                <span class="card-title black-text">Level Design</span>
                             </div>
                             <div class="card-content white-text">
                                 <p>Level layouts, design and analyses, seminars.</p>
