--- a/leveldesign.html
+++ b/leveldesign.html
@@ -139,7 +139,7 @@
         <div class="card hoverable black">
           <div class="card-image">
             <img src="images/leveldesign/golfbanner.jpg" />
-            <span class="card-title" style="color: black;"><b>Golf With Your Friends (Individual)</b></span>
+            <span class="card-title black-text"><b>Golf With Your Friends (Individual)</b></span>
           </div>
           <div class="card-content white-text">
             <p>
@@ -163,7 +163,7 @@
         <div class="card hoverable black">
           <div class="card-image">
             <img src="images/leveldesign/Portal-Pic.png" />
-            <span class="card-title">Portal Level Design (Individual)</span>
+            <span class="card-title black-text">Portal Level Design (Individual)</span>
           </div>
           <div class="card-content white-text">
             <p>
