update index links to buttons

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                 <!-- <a href="#" target="_blank">Trailer</a> -->
                                 <a class="waves-effect waves-light btn"
                                     href="https://news.ubisoft.com/en-us/article/6GznsIJyxNpulUSMJNxLs2/assassins-creed-and-splinter-cell-coming-to-oculus-vr"
-                                    target="_blank" id="playbutton">Info</a>
+                                    target="_blank">Info</a>
                             </div>
                         </div>
                     </div>
@@ -137,7 +137,7 @@
                                 </p>
                             </div>
                             <div class="card-action">
-                                <a href="https://www.youtube.com/watch?v=htzq7EEXQs8" target="_blank">Trailer</a>
+                                <a class="waves-effect waves-light btn" href="https://www.youtube.com/watch?v=htzq7EEXQs8" target="_blank">Trailer</a>
                             </div>
                         </div>
                     </div>
@@ -156,11 +156,11 @@
                                 </p>
                             </div>
                             <div class="card-action">
-                                <a href="https://www.youtube.com/watch?v=Kax36bQDNnA" target="_blank">Trailer</a>
-                                <a onclick="showhide_video('lightlessideodiv', 'lightlessvideoid');">Gameplay</a>
+                                <a class="waves-effect waves-light btn" href="https://www.youtube.com/watch?v=Kax36bQDNnA" target="_blank">Trailer</a>
+                                <a class="waves-effect waves-light btn" onclick="showhide_video('lightlessideodiv', 'lightlessvideoid');">Gameplay</a>
+                                <a class="waves-effect waves-light btn" href="https://link.medium.com/OxJha3zDvpb" target="_blank">My Research</a>
                                 <a class="waves-effect waves-light btn"
-                                    href="https://lightanic-studios.itch.io/lightless" target="_blank"
-                                    id="playbutton">Play</a>
+                                    href="https://lightanic-studios.itch.io/lightless" target="_blank">Play</a>
                             </div>
                             <div class="video-container" id="lightlessideodiv" style="display: none;">
                                 <iframe id="lightlessvideoid"
@@ -196,7 +196,7 @@
                                 <p>Level layouts, design and analyses, seminars.</p>
                             </div>
                             <div class="card-action">
-                                <a href="leveldesign.html" target="_blank">Check out My Work</a>
+                                <a class="waves-effect waves-light btn" href="leveldesign.html" target="_blank">Check out My Work</a>
                             </div>
                         </div>
                     </div>
@@ -210,7 +210,7 @@
                                 <p>Critiques, Pitches and Design Documents.</p>
                             </div>
                             <div class="card-action">
-                                <a href="gamedesign.html" target="_blank">Check out My Work</a>
+                                <a class="waves-effect waves-light btn" href="gamedesign.html" target="_blank">Check out My Work</a>
                             </div>
                         </div>
                     </div>
@@ -225,7 +225,7 @@
                                     Quality Assurance.</p>
                             </div>
                             <div class="card-action">
-                                <a href="gamedev.html" target="_blank">Check out My Work</a>
+                                <a class="waves-effect waves-light btn" href="gamedev.html" target="_blank">Check out My Work</a>
                             </div>
                         </div>
                     </div>
@@ -242,7 +242,7 @@
                                 <p>Weekly individual and team-based game jams!</p>
                             </div>
                             <div class="card-action">
-                                <a href="gameplay_prototyping.html" target="_blank">Check out My Work</a>
+                                <a class="waves-effect waves-light btn" href="gameplay_prototyping.html" target="_blank">Check out My Work</a>
                             </div>
                         </div>
                     </div>
@@ -258,7 +258,7 @@
                                 </p>
                             </div>
                             <div class="card-action">
-                                <a href="maya.html" target="_blank">Check out My Work</a>
+                                <a class="waves-effect waves-light btn" href="maya.html" target="_blank">Check out My Work</a>
                             </div>
                         </div>
                     </div>
@@ -273,7 +273,7 @@
                                     festival.</p>
                             </div>
                             <div class="card-action">
-                                <a href="vr_game_dev.html" target="_blank">Check out My Work</a>
+                                <a class="waves-effect waves-light btn" href="vr_game_dev.html" target="_blank">Check out My Work</a>
                             </div>
                         </div>
                     </div>
