update Ubisoft India links

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                                         <ul>
                                             <li>
                                                 Level Designer at <a
-                                                    href="https://www.ubisoft.com/en-us/company/careers/locations/mumbai"
+                                                    href="https://india.ubisoft.com"
                                                     target="_blank" style="text-decoration: none;">Ubisoft India</a>
                                                 <ul>
                                                     <li>- Working on Assassin's Creed for VR</li>
@@ -334,7 +334,7 @@
                                             </li>
                                             <li>
                                                 Junior Technical Level Designer at <a
-                                                    href="https://www.ubisoft.com/en-us/company/careers/locations/mumbai"
+                                                    href="https://india.ubisoft.com"
                                                     target="_blank" style="text-decoration: none;">Ubisoft India</a>
                                                 <ul>
                                                     <li>- Worked on Prince of Persia: The Sands of Time Remake</li>
